--- a/src/styles/components/list.scss
+++ b/src/styles/components/list.scss
@@ -66,10 +66,6 @@
       font-weight: 700;
       color: variables.$grey-4;
     }
-    &.hidden {
-      @include mixins.input-transition;
-      visibility: hidden;
-    }
   }
 
   .option {
@@ -85,6 +81,12 @@
     }
     i {
       color: variables.$grey-4;
+    }
+    &.hovered {
+      background-color: variables.$grey-7;
+    }
+    &.active {
+      border: 1px solid variables.$primary;
     }
     &.selected {
       background-color: variables.$primary;
