better handle lists without subheads

--- a/src/styles/components/list.scss
+++ b/src/styles/components/list.scss
@@ -67,6 +67,10 @@
       text-transform: uppercase;
       font-weight: 700;
       color: variables.$grey-4;
+      &.collapsed {
+        height: 0px;
+        border-bottom: none;
+      }
     }
   }
 
