--- a/src/styles/components/popup.scss
+++ b/src/styles/components/popup.scss
@@ -1,16 +1,18 @@
 @use '../abstracts/mixins';
 @use '../abstracts/variables';
 
-
+@mixin position($placement) {
+    
+}
 .modal-backdrop {
     position: fixed;
     top: 0; right: 0; bottom: 0; left: 0;
     z-index: 20;
     background-color: rgba(0,0,0,0.5);
     display: flex;
-    align-items: center;
-    justify-content: center;
-      
+    align-items: var(--position-place);
+    justify-content: var(--position-place);
+    
 
     .modal {
         @include mixins.miter-border(2, 0, variables.$grey-4, 4);
