--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -33,32 +33,64 @@ $shadows: (
   filter: #{map.get($shadows, $shadow)};
 }
 
+@mixin firefox-only {
+  @at-root {
+    @-moz-document url-prefix() {
+      & {
+        @content;
+      }
+    }
+  }
+}
+
+@mixin safari-only {
+  @media not all and (min-resolution: 0.001dpcm) {
+    & {
+      @content;
+    }
+  }
+}
+
+@mixin edge-only {
+  @supports (-ms-ime-align: auto) {
+    & {
+      @content;
+    }
+  }
+}
+
 @mixin miter($cut-length: 1, $border-width: 1) {
   $cut: list.nth($cuts, $cut-length);
   $hypotenuse: math.ceil(
     math.hypot($cut + $border-width * 0.25, $cut + $border-width * 0.25)
   );
-  $end: 100%;
+
+  --end: 100%;
+
+  @include firefox-only {
+    --end: calc(100% + 0.5px);
+  }
+
+  @include safari-only {
+    --end: calc(100% + 0.5px);
+  }
+
+  $end: var(--end);
+
   $miter-x: calc(#{$end} - #{$cut}px);
   $miter-y: calc(#{$end} - #{$cut}px);
+  $polygon: polygon(
+    $miter-x $end,
+    $end $miter-y,
+    $end 0,
+    0 0,
+    0 $end,
+    $miter-x $end
+  );
 
   > :first-child {
-    clip-path: polygon(
-      $miter-x $end,
-      $end $miter-y,
-      $end 0,
-      0 0,
-      0 $end,
-      $miter-x $end
-    );
-    -webkit-clip-path: polygon(
-      $miter-x $end,
-      $end $miter-y,
-      $end 0,
-      0 0,
-      0 $end,
-      $miter-x $end
-    );
+    clip-path: stroke-box $polygon;
+    -webkit-clip-path: $polygon;
     position: relative;
 
     &:after {
@@ -76,7 +108,7 @@ $shadows: (
       border-top: none;
 
       // Increasing the border width of this slightly gives a more consistent look on the diagonal
-      border-width: #{$border-width + $border-width * 0.5}px;
+      border-width: #{$border-width + $border-width * 0.25}px;
       transform: rotate(45deg);
       transform-origin: bottom;
     }
