--- a/src/styles/components/popup.scss
+++ b/src/styles/components/popup.scss
@@ -8,7 +8,7 @@
     position: fixed;
     top: 0; right: 0; bottom: 0; left: 0;
     z-index: 20;
-    background-color: rgba(0,0,0,0.5);
+    background-color: #e5e5e5;
     display: flex;
     align-items: var(--position-place);
     justify-content: var(--position-place);
