use variable for color

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -37,6 +37,7 @@ $text--white: #ffffff;
 $inactive: #cecdd3;
 $disabled: #f5f4fa;
 $background: #f7f8fa;
+$popup-background: #e5e5e5;
 
 $white: #ffffff;
 $primary: #024dfd;
