add demo of both pop-up types

--- a/src/styles/components/popup.scss
+++ b/src/styles/components/popup.scss
@@ -16,3 +16,14 @@
     }
 }
 
+.close-icon {
+    position: absolute;
+    right: 35px;
+    top: 35px;
+    cursor: pointer;
+}
+
+.h4-bottom {
+    margin-bottom: 36px;
+}
+
