--- a/src/styles/components/tabs.scss
+++ b/src/styles/components/tabs.scss
@@ -1,86 +1,7 @@
 @use '../abstracts/variables';
 @use '../abstracts/mixins';
 
-// .tabs-container {
-//   $width: 247.5px;
-//   $left-margin: -24px;
-//   $miter-width: 16px;
-
-//   border-radius: 4px;
-//   display: inline-block;
-//   position: relative;
-
-//   white-space: nowrap;
-
-//   &::after {
-//     @include mixins.miter(2);
-//     background-color: variables.$grey-3;
-//     border-radius: 4px;
-//     content: '';
-//     height: calc(100% + 4px);
-//     top: -2px;
-//     left: -2px;
-//     position: absolute;
-//     width: calc(100% + 4px);
-//     z-index: -3;
-//   }
-
-//   .slider {
-//     pointer-events: none;
-
-//     &::after,
-//     &::before {
-//       content: '';
-//       background-color: variables.$primary-100;
-//       position: absolute;
-//       z-index: -1;
-//     }
-
-//     &::after {
-//       @include mixins.miter(2);
-//       height: 100%;
-//       left: 0;
-//       top: 0;
-//       transition: all 250ms ease-in-out;
-//       width: calc(#{$width} - 2px);
-//     }
-
-//     &::before {
-//       bottom: 0;
-//       border: none;
-//       clip-path: polygon(0 100%, 100% 100%, 100% 0);
-//       left: calc(#{$miter-width} - 1px);
-//       height: $miter-width;
-//       width: 0px;
-//       transition: left 250ms ease-in-out;
-//       transform-origin: top left;
-//     }
-
-//     @for $i from 0 through 100 {
-//       &.tab-#{$i}-active {
-//         &::after {
-//           left: calc(#{$i} * #{$width} + 2px);
-//           border-radius: 3px 3px 0 #{if($i != 0, 0, 3px)};
-//         }
-
-//         &::before {
-//           left: calc(#{$i} * #{$width} - #{$miter-width} + 3px);
-//           width: if($i != 0, $miter-width, 0px) !important;
-//         }
-//       }
-//     }
-//   }
-// }
-
-.tabs-container {
-  $width: 227px;
-  $left-margin: -24px;
-  $miter-width: 16px;
-
-  overflow-x: auto;
-  white-space: nowrap;
-  position: relative;
-
+@mixin hide-scrollbars {
   /* Hide scrollbars */
   scrollbar-width: none; // Edge
   -ms-overflow-style: none; // Firefox
@@ -90,32 +11,68 @@
     display: none;
   }
   /* End hide scrollbars */
+}
 
-  &::after {
-    border-bottom: 2px solid variables.$primary;
-    bottom: 0;
-    content: '';
-    height: 0;
-    left: 0;
-    position: absolute;
-    transition: all 200ms ease-out;
-    width: $width;
+.component-wrapper {
+  @include mixins.miter(2, 2);
+  @include hide-scrollbars;
+
+  $width: 227px;
+  $left-margin: -24px;
+  $miter-width: 16px;
+
+  overflow: hidden;
+  white-space: nowrap;
+
+  .border-container {
+    // Adding this gives consistent spacing for the miter cut
+    border-right: 2px solid transparent;
+    border-bottom: 0px solid transparent;
+    position: relative;
+    width: 100%;
+
+    // This is necessary because the miter mixin inherits the entire border property but we want only the bottom border
+    &:after {
+      border-left: 4px solid variables.$grey-4;
+    }
   }
 
-  // &::before {
-  //   border-bottom: 2px solid variables.$grey-4;
-  //   content: '';
-  //   width: max-content;
-  //   height: 0;
-  //   left: 0;
-  //   position: absolute;
-  //   bottom: 0;
-  // }
+  .tabs-container {
+    @include hide-scrollbars;
 
-  @for $i from 0 through 100 {
-    &.tab-#{$i}-active {
-      &::after {
-        left: calc(#{$i} * #{$width});
+    height: 100%;
+    overflow: hidden;
+    overflow-x: auto;
+    position: relative;
+
+    &::after {
+      border-bottom: 2px solid variables.$primary;
+      bottom: 0;
+      content: '';
+      height: 0;
+      left: 0;
+      position: absolute;
+      transition: all 200ms ease-out;
+      width: $width;
+      box-sizing: border-box;
+    }
+
+    &::before {
+      border-bottom: 2px solid variables.$grey-4;
+      content: '';
+      width: max-content;
+      height: 0;
+      left: 0;
+      position: absolute;
+      bottom: 0;
+      box-sizing: border-box;
+    }
+
+    @for $i from 0 through 100 {
+      &.tab-#{$i}-active {
+        &::after {
+          left: calc(#{$i} * #{$width});
+        }
       }
     }
   }
