Remove dense prop

--- a/src/styles/components/tabs.scss
+++ b/src/styles/components/tabs.scss
@@ -43,7 +43,7 @@
     // This is used to offset the bottom border of the container element
     bottom: -2px;
     height: 100%;
-    overflow: hidden;
+    margin-right: 16px;
     overflow-x: auto;
 
     position: relative;
