Set button title attribute from slot content

--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -19,6 +19,12 @@ $shadows: (
   transition: all 250ms;
 }
 
+@mixin text-ellipsis {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 @mixin miter-original($i, $inner: false) {
   clip-path: polygon(
     0 0,
