--- a/src/styles/components/tab.scss
+++ b/src/styles/components/tab.scss
@@ -2,6 +2,7 @@
 @use '../abstracts/mixins';
 
 button.tab {
+  @include mixins.text-ellipsis;
   $width: 227px;
 
   background-color: transparent;
@@ -10,7 +11,8 @@ button.tab {
   height: max-content;
   cursor: pointer;
   font-size: 15px;
-  padding: 0;
+  padding: 12px 16px;
+  user-select: none;
   transition: color 200ms ease-in;
   width: $width;
 
@@ -35,17 +37,5 @@ button.tab {
 
   &.active {
     color: variables.$primary;
-  }
-
-  > div {
-    padding: 12px 16px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    user-select: none;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
   }
 }
