--- a/src/styles/components/tabs.scss
+++ b/src/styles/components/tabs.scss
@@ -71,9 +71,9 @@
     bottom: -2px;
     height: 100%;
     margin-right: 16px;
+    // outline: none;
     overflow-x: auto;
     overscroll-behavior-x: contain;
-
     position: relative;
 
     &::after {
