update modal background to opaque black

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -37,7 +37,7 @@ $text--white: #ffffff;
 $inactive: #cecdd3;
 $disabled: #f5f4fa;
 $background: #f7f8fa;
-$popup-background: #e5e5e5;
+$popup-background: rgba(0, 0, 0, 0.75);
 
 $white: #ffffff;
 $primary: #024dfd;
