--- a/src/styles/components/tooltip.scss
+++ b/src/styles/components/tooltip.scss
@@ -44,10 +44,7 @@
     border-top: 5px solid #090422;
 
     top: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    left: 0;
-    right: 0;
-    text-align: center;
+    left: 50%;
+    transform: translate(-50%, -25%);
   }
 }
