--- a/src/styles/components/tab.scss
+++ b/src/styles/components/tab.scss
@@ -9,6 +9,7 @@ button.tab {
   border: none;
   border-bottom: 2px solid variables.$grey-4;
   height: max-content;
+  border-radius: 4px 4px 0 0;
   cursor: pointer;
   font-size: 15px;
   padding: 12px 16px;
