--- a/src/styles/components/tooltip.scss
+++ b/src/styles/components/tooltip.scss
@@ -1,6 +1,7 @@
 .tooltip-box {
   position: relative;
   display: inline-block;
+  border: solid green;
 
   &:hover .tooltip {
     opacity: 1;
@@ -21,9 +22,27 @@
     background: #090422;
     color: #ffffff;
 
+    // Top
     bottom: 100%;
     left: 50%;
     transform: translate(-50%, -25%);
+
+    // Right
+    // bottom: 50%;
+    // left: 100%;
+    // transform: translateY(50%);
+    // margin-left: 10px;
+
+    // Left
+    // bottom: 50%;
+    // right: 100%;
+    // transform: translateY(50%);
+    // margin-right: 10px;
+
+    // Bottom
+    // top: 100%;
+    // left: 50%;
+    // transform: translate(-50%, 25%);
 
     opacity: 0;
     transition: opacity 0.7s;
@@ -33,18 +52,18 @@
     align-items: center;
   }
 
-  .text::after {
-    content: '';
-    position: absolute;
+  //   .text::after {
+  //     content: '';
+  //     position: absolute;
 
-    width: 0;
-    height: 0;
-    border-left: 5px solid transparent;
-    border-right: 5px solid transparent;
-    border-top: 5px solid #090422;
+  //     width: 0;
+  //     height: 0;
+  //     border-left: 5px solid transparent;
+  //     border-right: 5px solid transparent;
+  //     border-top: 5px solid #090422;
 
-    top: 100%;
-    left: 50%;
-    transform: translate(-50%, -25%);
-  }
+  //     top: 100%;
+  //     left: 50%;
+  //     transform: translate(-50%, -25%);
+  //   }
 }
