--- a/src/styles/components/tooltip.scss
+++ b/src/styles/components/tooltip.scss
@@ -20,31 +20,6 @@
     background: #090422;
     color: #ffffff;
 
-    // Top
-    bottom: 100%;
-    left: 50%;
-    transform: translateY(-50%);
-    transform: translateX(-50%);
-    margin-bottom: 7px;
-
-    // Right
-    // bottom: 50%;
-    // left: 100%;
-    // transform: translateY(50%);
-    // margin-left: 20px;
-
-    // Left
-    // bottom: 50%;
-    // right: 100%;
-    // transform: translateY(50%);
-    // margin-right: 10px;
-
-    // Bottom
-    // top: 100%;
-    // left: 50%;
-    // transform: translate(-50%, 25%);
-    // margin-top: 7px;
-
     opacity: 0;
     transition: opacity 0.7s;
     text-align: center;
@@ -55,37 +30,77 @@
     position: absolute;
     width: 0;
     height: 0;
+  }
 
-    // Left
-    // border-top: 5px solid transparent;
-    // border-bottom: 5px solid transparent;
-    // border-left: 5px solid #090422;
-    // bottom: 50%;
-    // left: 100%;
-    // transform: translateY(50%);
+  &.top {
+    .tooltip {
+      bottom: 100%;
+      left: 50%;
+      transform: translateY(-50%);
+      transform: translateX(-50%);
+      margin-bottom: 7px;
+    }
 
-    // Right
-    // border-top: 5px solid transparent;
-    // border-bottom: 5px solid transparent;
-    // border-right: 5px solid #090422;
-    // bottom: 50%;
-    // right: 100%;
-    // transform: translateY(50%);
+    .text::after {
+      border-left: 5px solid transparent;
+      border-right: 5px solid transparent;
+      border-top: 5px solid #090422;
+      top: 100%;
+      left: 50%;
+      transform: translate(-50%, -25%);
+    }
+  }
 
-    // Top
-    border-left: 5px solid transparent;
-    border-right: 5px solid transparent;
-    border-top: 5px solid #090422;
-    top: 100%;
-    left: 50%;
-    transform: translate(-50%, -25%);
+  &.bottom {
+    .tooltip {
+      top: 100%;
+      left: 50%;
+      transform: translateY(-50%);
+      transform: translateX(-50%);
+      margin-top: 7px;
+    }
 
-    // Bottom
-    // border-left: 5px solid transparent;
-    // border-right: 5px solid transparent;
-    // border-bottom: 5px solid #090422;
-    // bottom: 100%;
-    // left: 50%;
-    // transform: translate(-50%, 25%);
+    .text::after {
+      border-left: 5px solid transparent;
+      border-right: 5px solid transparent;
+      border-bottom: 5px solid #090422;
+      bottom: 100%;
+      left: 50%;
+      transform: translate(-50%, 25%);
+    }
+  }
+
+  &.right {
+    .tooltip {
+      bottom: 50%;
+      left: 100%;
+      transform: translateY(50%);
+      margin-left: 20px;
+    }
+    .text::after {
+      border-top: 5px solid transparent;
+      border-bottom: 5px solid transparent;
+      border-right: 5px solid #090422;
+      bottom: 50%;
+      right: 100%;
+      transform: translateY(50%);
+    }
+  }
+
+  &.left {
+    .tooltip {
+      bottom: 50%;
+      right: 100%;
+      transform: translateY(50%);
+      margin-right: 10px;
+    }
+    .text::after {
+      border-top: 5px solid transparent;
+      border-bottom: 5px solid transparent;
+      border-left: 5px solid #090422;
+      bottom: 50%;
+      left: 100%;
+      transform: translateY(50%);
+    }
   }
 }
