--- a/src/styles/components/tooltip.scss
+++ b/src/styles/components/tooltip.scss
@@ -7,13 +7,9 @@
   }
 
   .tooltip {
-    min-width: 83px;
-    min-height: 34px;
     color: black;
     position: absolute;
-    bottom: 100%;
-
-    padding: 5px 0;
+    padding: 5px;
     border-radius: 4px;
     opacity: 0;
     transition: opacity 0.7s;
@@ -23,6 +19,8 @@
     opacity: 0;
     transition: opacity 0.7s;
     text-align: center;
+    min-width: 83px;
+    min-height: 34px;
   }
 
   .text::after {
@@ -38,7 +36,7 @@
       left: 50%;
       transform: translateY(-50%);
       transform: translateX(-50%);
-      margin-bottom: 7px;
+      margin-bottom: 13px;
     }
 
     .text::after {
@@ -57,7 +55,7 @@
       left: 50%;
       transform: translateY(-50%);
       transform: translateX(-50%);
-      margin-top: 7px;
+      margin-top: 13px;
     }
 
     .text::after {
@@ -75,7 +73,7 @@
       bottom: 50%;
       left: 100%;
       transform: translateY(50%);
-      margin-left: 20px;
+      margin-left: 13px;
     }
     .text::after {
       border-top: 5px solid transparent;
@@ -92,7 +90,7 @@
       bottom: 50%;
       right: 100%;
       transform: translateY(50%);
-      margin-right: 10px;
+      margin-right: 13px;
     }
     .text::after {
       border-top: 5px solid transparent;
