--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -11,6 +11,7 @@ body {
   font-size: 14px;
   letter-spacing: -0.41px;
   line-height: 24px;
+  font-weight: 400;
 }
 
 h1,
@@ -29,24 +30,28 @@ h1 {
   font-size: 40px;
   letter-spacing: 0.4px;
   line-height: 48px;
+  font-weight: 400;
 }
 
 h2 {
   font-size: 34px;
   letter-spacing: 0.3px;
   line-height: 40px;
+  font-weight: 400;
 }
 
 h3 {
   font-size: 28px;
   letter-spacing: 0.24px;
   line-height: 34px;
+  font-weight: 400;
 }
 
 h4 {
   font-size: 24px;
   letter-spacing: 0.2px;
   line-height: 28px;
+  font-weight: 400;
 }
 
 h5 {
@@ -54,6 +59,7 @@ h5 {
   font-size: 20px;
   letter-spacing: 0.18px;
   line-height: 24px;
+  font-weight: 400;
 }
 
 h6 {
@@ -61,10 +67,15 @@ h6 {
   font-size: 16px;
   letter-spacing: 0.4px;
   line-height: 20px;
+  font-weight: 400;
 }
 
 .font-weight-light {
   font-weight: 100;
+}
+
+.font-weight-bold {
+  font-weight: 600;
 }
 
 .text-caption-1 {
