--- a/src/styles/components/tooltip.scss
+++ b/src/styles/components/tooltip.scss
@@ -1,3 +1,5 @@
+$background: #090422;
+
 .tooltip-box {
   position: relative;
   display: inline-block;
@@ -7,17 +9,14 @@
   }
 
   .tooltip {
-    color: black;
     position: absolute;
     padding: 5px;
     border-radius: 4px;
     opacity: 0;
     transition: opacity 0.7s;
-    background: #090422;
+    background: $background;
     color: #ffffff;
 
-    opacity: 0;
-    transition: opacity 0.7s;
     text-align: center;
     min-width: 83px;
     min-height: 34px;
@@ -43,7 +42,7 @@
     .text::after {
       border-left: 5px solid transparent;
       border-right: 5px solid transparent;
-      border-top: 5px solid #090422;
+      border-top: 5px solid $background;
       top: 100%;
       left: 50%;
       transform: translate(-50%, -25%);
@@ -62,7 +61,7 @@
     .text::after {
       border-left: 5px solid transparent;
       border-right: 5px solid transparent;
-      border-bottom: 5px solid #090422;
+      border-bottom: 5px solid $background;
       bottom: 100%;
       left: 50%;
       transform: translate(-50%, 25%);
@@ -79,7 +78,7 @@
     .text::after {
       border-top: 5px solid transparent;
       border-bottom: 5px solid transparent;
-      border-right: 5px solid #090422;
+      border-right: 5px solid $background;
       bottom: 50%;
       right: 100%;
       transform: translateY(50%);
@@ -96,7 +95,7 @@
     .text::after {
       border-top: 5px solid transparent;
       border-bottom: 5px solid transparent;
-      border-left: 5px solid #090422;
+      border-left: 5px solid $background;
       bottom: 50%;
       left: 100%;
       transform: translateY(50%);
