update css and rm data

--- a/src/styles/components/tooltip.scss
+++ b/src/styles/components/tooltip.scss
@@ -15,7 +15,7 @@ $background: #090422;
     opacity: 0;
     transition: opacity 0.7s;
     background: $background;
-    color: #ffffff;
+    color: white;
 
     text-align: center;
     min-width: 83px;
