--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -78,8 +78,12 @@ h6 {
   font-weight: 400;
 }
 
-.font-weight-bold {
+.font-weight-semibold {
   font-weight: 600;
+}
+
+.font-weight-bold {
+  font-weight: 700;
 }
 
 .text-caption-1 {
