--- a/src/styles/components/tab.scss
+++ b/src/styles/components/tab.scss
@@ -14,6 +14,7 @@ button.tab {
   font-size: 15px;
   padding: 12px 16px;
   user-select: none;
+  -webkit-user-select: none;
   transition: color 200ms ease-in;
   width: $width;
 
